assignment2/cool.output
Terminals unused in grammar

   ERROR


State 12 conflicts: 2 shift/reduce
State 21 conflicts: 2 shift/reduce
State 28 conflicts: 1 reduce/reduce
State 65 conflicts: 10 reduce/reduce
State 77 conflicts: 1 shift/reduce
State 119 conflicts: 10 reduce/reduce
State 121 conflicts: 9 shift/reduce
State 128 conflicts: 1 shift/reduce
State 132 conflicts: 9 shift/reduce
State 160 conflicts: 10 reduce/reduce
State 162 conflicts: 9 shift/reduce
State 164 conflicts: 9 shift/reduce
State 165 conflicts: 1 shift/reduce
State 169 conflicts: 9 shift/reduce
State 171 conflicts: 9 shift/reduce
State 172 conflicts: 1 shift/reduce
State 177 conflicts: 9 shift/reduce
State 182 conflicts: 9 shift/reduce
State 188 conflicts: 9 shift/reduce
State 189 conflicts: 21 reduce/reduce
State 190 conflicts: 9 shift/reduce
State 192 conflicts: 9 shift/reduce
State 193 conflicts: 21 reduce/reduce
State 194 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID error '{'
    7      | error ';'

    8 feature_list: /* empty */
    9             | feature
   10             | feature_list feature

   11 feature: method
   12        | attr
   13        | error ';'

   14 method: OBJECTID '(' optional_formal_list ')' ':' TYPEID '{' expression '}' ';'

   15 attr: OBJECTID ':' TYPEID optional_assign ';'

   16 optional_formal_list: /* empty */
   17                     | formal_list
   18                     | error

   19 formal_list: formal
   20            | formal_list ',' formal
   21            | error

   22 optional_assign: /* empty */
   23                | ASSIGN expression

   24 formal: OBJECTID ':' TYPEID

   25 case_list: case
   26          | case_list case
   27          | case error ESAC

   28 case: OBJECTID ':' TYPEID DARROW expression ';'
   29     | error ESAC

   30 lets: LET OBJECTID ':' TYPEID IN expression
   31     | LET OBJECTID ':' TYPEID ASSIGN expression IN expression
   32     | LET OBJECTID ':' TYPEID lets
   33     | LET OBJECTID ':' TYPEID ASSIGN expression lets
   34     | ',' OBJECTID ':' TYPEID IN expression
   35     | ',' OBJECTID ':' TYPEID ASSIGN expression IN expression
   36     | ',' OBJECTID ':' TYPEID lets
   37     | ',' OBJECTID ':' TYPEID ASSIGN expression lets
   38     | LET error IN expression
   39     | LET OBJECTID ':' error IN expression
   40     | LET OBJECTID ':' TYPEID error IN expression
   41     | LET OBJECTID ':' TYPEID ASSIGN error IN expression
   42     | LET OBJECTID ':' TYPEID ASSIGN expression IN error
   43     | ',' error IN expression
   44     | ',' OBJECTID ':' error IN expression
   45     | ',' OBJECTID ':' TYPEID error IN expression
   46     | ',' OBJECTID ':' TYPEID ASSIGN error IN expression
   47     | ',' OBJECTID ':' TYPEID ASSIGN expression IN error

   48 expression_list: expression
   49                | expression_list ',' expression

   50 multi_expression: expression ';'
   51                 | multi_expression expression ';'
   52                 | error ';'

   53 expression: OBJECTID ASSIGN expression
   54           | expression '.' OBJECTID '(' ')'
   55           | expression '.' OBJECTID '(' expression_list ')'
   56           | OBJECTID '(' ')'
   57           | OBJECTID '(' expression_list ')'
   58           | expression '@' TYPEID '.' OBJECTID '(' ')'
   59           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   60           | IF expression THEN expression ELSE expression FI
   61           | IF error
   62           | IF expression THEN error
   63           | IF expression THEN expression ELSE error
   64           | WHILE expression LOOP expression POOL
   65           | '{' multi_expression '}'
   66           | lets
   67           | CASE expression OF case_list ESAC
   68           | NEW TYPEID
   69           | ISVOID expression
   70           | '~' expression
   71           | expression '+' expression
   72           | expression '-' expression
   73           | expression '*' expression
   74           | expression '/' expression
   75           | expression '<' expression
   76           | expression LE expression
   77           | expression '=' expression
   78           | NOT expression
   79           | '(' expression ')'
   80           | OBJECTID
   81           | INT_CONST
   82           | STR_CONST
   83           | BOOL_CONST
   84           | error


Terminals, with rules where they appear

$end (0) 0
'(' (40) 14 54 55 56 57 58 59 79
')' (41) 14 54 55 56 57 58 59 79
'*' (42) 73
'+' (43) 71
',' (44) 20 34 35 36 37 43 44 45 46 47 49
'-' (45) 72
'.' (46) 54 55 58 59
'/' (47) 74
':' (58) 14 15 24 28 30 31 32 33 34 35 36 37 39 40 41 42 44 45 46 47
';' (59) 4 5 7 13 14 15 28 50 51 52
'<' (60) 75
'=' (61) 77
'@' (64) 58 59
'{' (123) 4 5 6 14 65
'}' (125) 4 5 14 65
'~' (126) 70
error (256) 6 7 13 18 21 27 29 38 39 40 41 42 43 44 45 46 47 52 61
    62 63 84
CLASS (258) 4 5 6
ELSE (259) 60 63
FI (260) 60
IF (261) 60 61 62 63
IN (262) 30 31 34 35 38 39 40 41 42 43 44 45 46 47
INHERITS (263) 5
LET (264) 30 31 32 33 38 39 40 41 42
LOOP (265) 64
POOL (266) 64
THEN (267) 60 62 63
WHILE (268) 64
CASE (269) 67
ESAC (270) 27 29 67
OF (271) 67
DARROW (272) 28
NEW (273) 68
ISVOID (274) 69
STR_CONST (275) 82
INT_CONST (276) 81
BOOL_CONST (277) 83
TYPEID (278) 4 5 6 14 15 24 28 30 31 32 33 34 35 36 37 40 41 42 45
    46 47 58 59 68
OBJECTID (279) 14 15 24 28 30 31 32 33 34 35 36 37 39 40 41 42 44 45
    46 47 53 54 55 56 57 58 59 80
ASSIGN (280) 23 31 33 35 37 41 42 46 47 53
NOT (281) 78
LE (282) 76
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6 7, on right: 2 3
feature_list (49)
    on left: 8 9 10, on right: 4 5 10
feature (50)
    on left: 11 12 13, on right: 9 10
method (51)
    on left: 14, on right: 11
attr (52)
    on left: 15, on right: 12
optional_formal_list (53)
    on left: 16 17 18, on right: 14
formal_list (54)
    on left: 19 20 21, on right: 17 20
optional_assign (55)
    on left: 22 23, on right: 15
formal (56)
    on left: 24, on right: 19 20
case_list (57)
    on left: 25 26 27, on right: 26 67
case (58)
    on left: 28 29, on right: 25 26 27
lets (59)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47,
    on right: 32 33 36 37 66
expression_list (60)
    on left: 48 49, on right: 49 55 57 59
multi_expression (61)
    on left: 50 51 52, on right: 51 65
expression (62)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 73 74 75 76 77 78 79 80 81 82 83 84, on right: 14 23 28 30
    31 33 34 35 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 53 54
    55 58 59 60 62 63 64 67 69 70 71 72 73 74 75 76 77 78 79


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    7 class: error . ';'

    ';'  shift, and go to state 6


state 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID error '{'

    TYPEID  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


state 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 6

    7 class: error ';' .

    $default  reduce using rule 7 (class)


state 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID . error '{'

    error     shift, and go to state 10
    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 10

    6 class: CLASS TYPEID error . '{'

    '{'  shift, and go to state 13


state 11

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 14


state 12

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    error     [reduce using rule 8 (feature_list)]
    OBJECTID  [reduce using rule 8 (feature_list)]
    '}'       reduce using rule 8 (feature_list)

    feature_list  go to state 17
    feature       go to state 18
    method        go to state 19
    attr          go to state 20


state 13

    6 class: CLASS TYPEID error '{' .

    $default  reduce using rule 6 (class)


state 14

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 21


state 15

   13 feature: error . ';'

    ';'  shift, and go to state 22


state 16

   14 method: OBJECTID . '(' optional_formal_list ')' ':' TYPEID '{' expression '}' ';'
   15 attr: OBJECTID . ':' TYPEID optional_assign ';'

    '('  shift, and go to state 23
    ':'  shift, and go to state 24


state 17

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 25

    feature  go to state 26
    method   go to state 19
    attr     go to state 20


state 18

    9 feature_list: feature .

    $default  reduce using rule 9 (feature_list)


state 19

   11 feature: method .

    $default  reduce using rule 11 (feature)


state 20

   12 feature: attr .

    $default  reduce using rule 12 (feature)


state 21

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    error     [reduce using rule 8 (feature_list)]
    OBJECTID  [reduce using rule 8 (feature_list)]
    '}'       reduce using rule 8 (feature_list)

    feature_list  go to state 27
    feature       go to state 18
    method        go to state 19
    attr          go to state 20


state 22

   13 feature: error ';' .

    $default  reduce using rule 13 (feature)


state 23

   14 method: OBJECTID '(' . optional_formal_list ')' ':' TYPEID '{' expression '}' ';'

    error     shift, and go to state 28
    OBJECTID  shift, and go to state 29

    ')'  reduce using rule 16 (optional_formal_list)

    optional_formal_list  go to state 30
    formal_list           go to state 31
    formal                go to state 32


state 24

   15 attr: OBJECTID ':' . TYPEID optional_assign ';'

    TYPEID  shift, and go to state 33


state 25

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 34


state 26

   10 feature_list: feature_list feature .

    $default  reduce using rule 10 (feature_list)


state 27

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 35

    feature  go to state 26
    method   go to state 19
    attr     go to state 20


state 28

   18 optional_formal_list: error .
   21 formal_list: error .

    ')'       reduce using rule 18 (optional_formal_list)
    ')'       [reduce using rule 21 (formal_list)]
    ','       reduce using rule 21 (formal_list)
    $default  reduce using rule 18 (optional_formal_list)


state 29

   24 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 36


state 30

   14 method: OBJECTID '(' optional_formal_list . ')' ':' TYPEID '{' expression '}' ';'

    ')'  shift, and go to state 37


state 31

   17 optional_formal_list: formal_list .
   20 formal_list: formal_list . ',' formal

    ','  shift, and go to state 38

    $default  reduce using rule 17 (optional_formal_list)


state 32

   19 formal_list: formal .

    $default  reduce using rule 19 (formal_list)


state 33

   15 attr: OBJECTID ':' TYPEID . optional_assign ';'

    ASSIGN  shift, and go to state 39

    $default  reduce using rule 22 (optional_assign)

    optional_assign  go to state 40


state 34

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 35

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 41


state 36

   24 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 42


state 37

   14 method: OBJECTID '(' optional_formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 43


state 38

   20 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 29

    formal  go to state 44


state 39

   23 optional_assign: ASSIGN . expression

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59
    ','         shift, and go to state 60

    lets        go to state 61
    expression  go to state 62


state 40

   15 attr: OBJECTID ':' TYPEID optional_assign . ';'

    ';'  shift, and go to state 63


state 41

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 42

   24 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 24 (formal)


state 43

   14 method: OBJECTID '(' optional_formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 64


state 44

   20 formal_list: formal_list ',' formal .

    $default  reduce using rule 20 (formal_list)


state 45

   84 expression: error .

    $default  reduce using rule 84 (expression)


state 46

   60 expression: IF . expression THEN expression ELSE expression FI
   61           | IF . error
   62           | IF . expression THEN error
   63           | IF . expression THEN expression ELSE error

    error       shift, and go to state 65
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59
    ','         shift, and go to state 60

    lets        go to state 61
    expression  go to state 66


state 47

   30 lets: LET . OBJECTID ':' TYPEID IN expression
   31     | LET . OBJECTID ':' TYPEID ASSIGN expression IN expression
   32     | LET . OBJECTID ':' TYPEID lets
   33     | LET . OBJECTID ':' TYPEID ASSIGN expression lets
   38     | LET . error IN expression
   39     | LET . OBJECTID ':' error IN expression
   40     | LET . OBJECTID ':' TYPEID error IN expression
   41     | LET . OBJECTID ':' TYPEID ASSIGN error IN expression
   42     | LET . OBJECTID ':' TYPEID ASSIGN expression IN error

    error     shift, and go to state 67
    OBJECTID  shift, and go to state 68


state 48

   64 expression: WHILE . expression LOOP expression POOL

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59
    ','         shift, and go to state 60

    lets        go to state 61
    expression  go to state 69


state 49

   67 expression: CASE . expression OF case_list ESAC

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59
    ','         shift, and go to state 60

    lets        go to state 61
    expression  go to state 70


state 50

   68 expression: NEW . TYPEID

    TYPEID  shift, and go to state 71


state 51

   69 expression: ISVOID . expression

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59
    ','         shift, and go to state 60

    lets        go to state 61
    expression  go to state 72


state 52

   82 expression: STR_CONST .

    $default  reduce using rule 82 (expression)


state 53

   81 expression: INT_CONST .

    $default  reduce using rule 81 (expression)


state 54

   83 expression: BOOL_CONST .

    $default  reduce using rule 83 (expression)


state 55

   53 expression: OBJECTID . ASSIGN expression
   56           | OBJECTID . '(' ')'
   57           | OBJECTID . '(' expression_list ')'
   80           | OBJECTID .

    ASSIGN  shift, and go to state 73
    '('     shift, and go to state 74

    $default  reduce using rule 80 (expression)


state 56

   78 expression: NOT . expression

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59
    ','         shift, and go to state 60

    lets        go to state 61
    expression  go to state 75


state 57

   70 expression: '~' . expression

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59
    ','         shift, and go to state 60

    lets        go to state 61
    expression  go to state 76


state 58

   65 expression: '{' . multi_expression '}'

    error       shift, and go to state 77
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59
    ','         shift, and go to state 60

    lets              go to state 61
    multi_expression  go to state 78
    expression        go to state 79


state 59

   79 expression: '(' . expression ')'
